# yt-vision-pro

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
skills/: yt-cache-cleanup.md  yt-deep-research.md
src/yt_vision_pro/: __init__.py  __main__.py  align.py  cli.py  db.py  extract.py  fetch.py  filters.py  manifest.py  ocr.py  stages.py  transcript_cues.py  whisper.py
tests/: test_alignment.py  test_chapter_manifest.py  test_chapters.py  test_cli.py  test_db.py  test_extract.py  test_fetch.py  test_filters.py  test_manifest.py  test_manifest_v2.py  test_ocr.py  test_stages.py  test_synthetic_chapters.py  test_transcript_cues.py  test_whisper.py
tests/golden/: reference_videos.json
